# Apps-Programmeren-Jaar-1

./: README.md
MobileServer/: CMakeLists.txt  CProgram.cs  Client.cs  Program.cs  Server.cs
MobileServer/Properties/: CAssemblyInfo.cs
Week 1/HelloApp/HelloApp/: HelloApp.csproj
Week 2/: WeekTwo.sln
Week 2/WeekTwo/WeekTwo/: App.xaml  App.xaml.cs  DatabaseManager.cs  IDBlnterface.cs  MainPage.xaml  MainPage.xaml.cs  Movie.cs  WeekTwo.csproj
Week 2/WeekTwo/WeekTwo.Android/: DatabaseService.cs  MainActivity.cs  WeekTwo.Android.csproj
Week 2/WeekTwo/WeekTwo.iOS/: AppDelegate.cs  DatabaseService.cs  Info.plist  Main.cs  WeekTwo.iOS.csproj
Week3_Client/: Week3_Client.sln
Week3_Client/Week3_Client/Week3_Client/: App.xaml  App.xaml.cs  Client.cs  MainPage.xaml  MainPage.xaml.cs
Week3_Client/Week3_Client/Week3_Client.Android/: MainActivity.cs  Week3_Client.Android.csproj
Week3_Client/Week3_Client/Week3_Client.iOS/: AppDelegate.cs  Info.plist  Main.cs  Week3_Client.iOS.csproj
Week4/: Week4.sln
Week4/Week4/Week4/: App.xaml  App.xaml.cs  CustomViewCell.cs  DatabaseManager.cs  IDBInterface.cs  Week4.csproj
Week4/Week4/Week4.Android/: CustomViewCellRenderder.cs  DatabaseService.cs  MainActivity.cs  Week4.Android.csproj
Week4/Week4/Week4.iOS/: AppDelegate.cs  CustomViewCellRenderder.cs  DatabaseService.cs  Info.plist  Main.cs  Week4.iOS.csproj
Week5/: Week5.sln
Week5/Week5/Week5.Android/: MainActivity.cs  Week5.Android.csproj
Week5/Week5/Week5.iOS/: AppDelegate.cs  Info.plist  Main.cs  Week5.iOS.csproj
Week5/Week5_SocketServer/: Week5_SocketServer.ino
(+40 files in other folders)
